Fix site appearence on small screens and collect static

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -444,6 +444,60 @@ footer .copyright {
     }
 }
 
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .home-text {
+        font-size: 1.3rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner>h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-dark.rounded-0,
+    .btn.btn-light.rounded-0,
+    .btn.btn-dark.rounded-0,
+    .btn.btn-success.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-dark.rounded-0.btn-lg,
+    .btn.btn-light.rounded-0.btn-lg,
+    .btn.btn-dark.rounded-0.btn-lg, 
+    .btn.btn-success.rounded-0.btn-lg{
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
+}
+
 @media (min-width:1200px) {
     .display-4 {
         font-size: 2.5rem;
